# DataCrawling

./: README.md
14장_data/: GOOG.csv
14장_data/dog/말티즈/: 4.jfif  5.jfif
8장_data/: myCabinetExcelData (1).xls  myCabinetExcelData (2).xls  myCabinetExcelData (3).xls  myCabinetExcelData (4).xls  myCabinetExcelData (5).xls  myCabinetExcelData (6).xls  myCabinetExcelData (7).xls  myCabinetExcelData (8).xls  myCabinetExcelData (9).xls  myCabinetExcelData.xls  riss_bigdata.csv
crawling_project/: 10장_미세먼지회귀분석.ipynb  10장_자동차연비분석.ipynb  11장_(1)로지스틱회귀분석.ipynb  11장_결정트리분석.ipynb  12장_군집분석.ipynb  14장_(1)LSTM주가분석.ipynb  14장_(2)Prophet-주가예측분석.ipynb  14장_(3)CNN숫자이미지분류.ipynb  14장_(4)CNN품종분류.ipynb  8장_영어단어분석.ipynb  8장_한글단어분석.ipynb  main.py  pyproject.toml  requirements.txt
crawling_project/.ipynb_checkpoints/: 11장_(1)로지스틱회귀분석-checkpoint.ipynb  14장_(2)Prophet-주가예측분석-checkpoint.ipynb
crawling_project/crawling_example/: .env  CGJchicken.py  CRW_ex05-1_KJH.py  CRW_ex05-2_KJH.py  CRW_ex05-3_KJH.py  CRW_ex05-4_KJH.py  datagokr.py  kakaoMapAPI.py  navernews.py
final_project/WebCrawling/: analysis.ipynb  bootcampCrawling.csv  bootcampCrawling.py  geeknewsCrawling.py  inflearnCrawling.csv  inflearnCrawling.py  okkyCrawling.py  yozm_articles_20251214_205605.csv  yzitCrawling.py
final_project/WebCrawling/분석결과/: AI_뉴스_리스트.csv  AI_부트캠프_리스트.csv  인사이트_리포트.md  플랫폼별_요약.csv
final_project/사람인 분석/: saramin.ipynb  saramin_detailed_20251213_033040.csv  saramin_model_20251213_033040.csv
final_project/주가 분석/: stock.ipynb
final_project/직무 ai툴/: ANOVA.ipynb  ai_tool.ipynb
(+29 files in other folders)
